--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 * {
     margin: 0;
     padding: 0;
@@ -13,6 +11,29 @@ header {
     width: 100%;
     height: 8vh;
     background-color: rgba(231, 105, 228, 0.25);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 10px;
+    font-family: "QuinqueFive", sans-serif;
+}
+
+.logo {
+    height: 80%;
+}
+
+.header-items {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.header-items a {
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
 }
 
 .start {
@@ -21,8 +42,4 @@ header {
     height: 100vh;
     width: 100%;
     background-image: linear-gradient(90deg, #1E7B9D, #400A68);
-}
-
-.logo {
-    height: 80%;
 }
