--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: "QuinqueFive", sans-serif;
+}
+
 header {
     position: fixed;
     top: 0;
@@ -15,7 +19,6 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 0px 10px;
-    font-family: "QuinqueFive", sans-serif;
 }
 
 .logo {
@@ -24,7 +27,7 @@ header {
 
 .header-items {
     height: 100%;
-    width: 50%;
+    width: 60%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -36,10 +39,58 @@ header {
     font-size: 20px;
 }
 
-.start {
+.start-section {
     margin-top: 0;
-    padding-top: 100px;
+    padding-top: 8vh;
     height: 100vh;
     width: 100%;
     background-image: linear-gradient(90deg, #1E7B9D, #400A68);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.start-section .content {
+    text-align: center;
+    height: 100%;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.start-section h1 {
+    margin-bottom: 10px;
+    font-size: 90px;
+    text-shadow: 0px 5px 10px rgb(49, 49, 49);
+}
+
+.start-section h2 {
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+
+.start-section img {
+    
+}
+
+#main-btn {
+    max-width: 100%;
+    max-height: 300px;
+    margin-top: 20px;
+    width: 40%;
+}
+
+#select-course-btn {
+    width: 18%;
+    margin-top: 30px;
+}
+
+.blue-letter {
+    color: #A4FFDE;
+}
+
+.purple-letter {
+    color: #E769E4;
 }
