--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ header {
 }
 
 .start-section {
+    padding-left: 5%;
+    padding-right: 5%;
     margin-top: 0;
     padding-top: 8vh;
     height: 100vh;
@@ -199,14 +201,52 @@ header {
     height: 300vh;
     width: 100%;
     background-image: linear-gradient(100deg, #1E7B9D, #400A68);
+    padding: 2%;
     padding-top: 10vh;
 }
 
 .title-text {
     text-align: center;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
-section {
-    padding-left: 5%;
-    padding-right: 5%;
+.facts-section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: flex-end;
+    height: 55vh;
+    padding-top: 7vh;
+}
+
+.fact-left {
+    align-self: flex-start;
+    width: 50%;
+}
+
+.fact-center {
+    align-self: center;
+}
+
+.fact-right {
+    align-self: flex-end;
+}
+
+.fact {
+    max-width: 65%;
+    margin-bottom: 3%;
+}
+
+#right-cloud-landing {
+    position: relative;
+    background-image: url(res/right-cloud.png);
+    width: 15%;
+    height: 18vh;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    right: 0;
+    top: 10vh;
 }
