--- a/style.css
+++ b/style.css
@@ -5,6 +5,15 @@
         url("fonts/QuinqueFive.ttf")format("ttf");
 }
 
+@font-face {
+    font-family: "SuperMario";
+    src: url("fonts/SuperMario286/SuperMario286.woff")format("woff"),
+        url("fonts/SuperMario286/SuperMario286.ttf")format("ttf"),
+        url("fonts/SuperMario286/SuperMario286.woff2")format("woff2"),
+        url("fonts/SuperMario286/SuperMario286.otf")format("otf");
+    ;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -12,7 +21,7 @@
 }
 
 body {
-    font-family: "QuinqueFive", sans-serif;
+    font-family: "SuperMario", sans-serif;
     color: white;
     line-height: 1.5;
 }
@@ -30,8 +39,12 @@ header {
     padding: 0px 10px;
 }
 
+.conteiner {
+    position: relative;
+}
+
 .logo {
-    height: 80%;
+    height: 90%;
 }
 
 .header-items {
@@ -45,7 +58,7 @@ header {
 .header-items a {
     color: white;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 37px;
 }
 
 .start-section {
@@ -72,26 +85,37 @@ header {
 }
 
 .start-section h1 {
-    margin-bottom: 10px;
-    font-size: 90px;
+    font-size: 140px;
     text-shadow: 0px 5px 10px rgb(49, 49, 49);
 }
 
 .start-section h2 {
     margin-bottom: 10px;
-    font-size: 20px;
+    font-size: 50px;
+    letter-spacing: 2px;
 }
 
 #main-btn {
     max-width: 100%;
     max-height: 300px;
-    margin-top: 20px;
     width: 40%;
 }
 
-#select-course-btn {
-    width: 18%;
+#select-course {
+    width: 20%;
     margin-top: 30px;
+    position: relative;
+}
+
+#select-course-btn {
+    width: 100%;
+}
+
+#pointer {
+    position: absolute;
+    height: 60px;
+    bottom: 0;
+    right: 0;
 }
 
 .blue-letter {
@@ -124,6 +148,18 @@ header {
     background-position: center;
     right: 7%;
     bottom: 4vh;
+}
+
+#kodamic {
+    position: absolute;
+    background-image: url(res/kodamic.png);
+    width: 6%;
+    height: 30vh;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    left: 7%;
+    bottom: 3vh;
 }
 
 #ground {
@@ -164,13 +200,13 @@ header {
 #mashroom {
     position: absolute;
     background-image: url(res/mashroom.png);
-    width: 10%;
+    width: 7%;
     height: 27vh;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     right: 30%;
-    bottom: 4vh;
+    bottom: 2vh;
 }
 
 #hearts {
@@ -197,7 +233,7 @@ header {
     top: 6vh;
 }
 
-.landing-section {
+/*.landing-section {
     height: 300vh;
     width: 100%;
     background-image: linear-gradient(100deg, #1E7B9D, #400A68);
@@ -249,4 +285,4 @@ header {
     background-position: center;
     right: 0;
     top: 10vh;
-}
+} */
