--- a/style.css
+++ b/style.css
@@ -357,3 +357,21 @@ header {
     background-position: center;
     background-size: contain;
 }
+
+#between-decor-purple {
+    background-color: #410E6A;
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 30%;
+    padding-right: 30%;
+    letter-spacing: 2px;
+}
+
+#between-decor-purple h3 {
+    color: white;
+    font-size: 43px;
+    text-align: center;
+}
