--- a/style.css
+++ b/style.css
@@ -233,60 +233,6 @@ header {
     top: 6vh;
 }
 
-/*.landing-section {
-    height: 300vh;
-    width: 100%;
-    background-image: linear-gradient(100deg, #1E7B9D, #400A68);
-    padding: 2%;
-    padding-top: 10vh;
-}
-
-.title-text {
-    text-align: center;
-    margin-left: 5%;
-    margin-right: 5%;
-}
-
-.facts-section {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-content: flex-end;
-    height: 55vh;
-    padding-top: 7vh;
-}
-
-.fact-left {
-    align-self: flex-start;
-    width: 50%;
-}
-
-.fact-center {
-    align-self: center;
-}
-
-.fact-right {
-    align-self: flex-end;
-}
-
-.fact {
-    max-width: 65%;
-    margin-bottom: 3%;
-}
-
-#right-cloud-landing {
-    position: relative;
-    background-image: url(res/right-cloud.png);
-    width: 15%;
-    height: 18vh;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    right: 0;
-    top: 10vh;
-} */
-
 .about-section {
     text-align: center;
     max-height: 200vh;
@@ -374,4 +320,68 @@ header {
     color: white;
     font-size: 43px;
     text-align: center;
+}
+
+.courses-section {
+    text-align: center;
+    max-height: 150vh;
+    color: white;
+    display: relative;
+}
+
+.courses-content {
+    position: relative;
+}
+
+
+@media screen and (max-width: 768px) {
+    header {
+        height: auto;
+        padding: 10px;
+    }
+
+    .header-items {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header-items a {
+        margin: 10px 0;
+    }
+
+    .start-section {
+        padding: 8vh 5% 10vh;
+    }
+
+    .start-section h1 {
+        font-size: 8vw;
+    }
+
+    .start-section h2 {
+        font-size: 5vw;
+    }
+
+    #main-btn {
+        max-width: 80%;
+        height: auto;
+    }
+
+    .about-section .left,
+    .about-section .right {
+        flex: 1;
+        padding: 0 5%;
+    }
+
+    .about-section .right img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .courses-section {
+        padding: 8vh 5% 10vh;
+    }
+
+    .courses-section h3 {
+        font-size: 5vw;
+    }
 }
