--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 body {
@@ -61,6 +62,11 @@ header {
     color: white;
     text-decoration: none;
     font-size: 37px;
+    transition: 0.5s;
+}
+
+.header-items a:hover {
+    color: #A4FFDE;
 }
 
 .start-section {
@@ -111,6 +117,12 @@ header {
 
 #select-course-btn {
     width: 100%;
+}
+
+#select-course:hover {
+    animation-name: select-course-btn-animation;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
 }
 
 #pointer {
@@ -177,26 +189,34 @@ header {
 
 #left-cloud {
     position: absolute;
-    background-image: url(res/left_cloud.png);
-    width: 15%;
+    background-image: url(res/two_clouds.png);
+    width: 22%;
     height: 20vh;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    left: 0;
+    left: -20vh;
     top: 20vh;
+    z-index: 0;
+    animation-name: cloud_flying;
+    animation-duration: var(--duration, 8s);
+    animation-iteration-count: infinite;
 }
 
 #right-cloud {
     position: absolute;
-    background-image: url(res/right-cloud.png);
-    width: 15%;
-    height: 18vh;
+    background-image: url(res/two_clouds.png);
+    width: 25%;
+    height: 23vh;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    right: 0;
-    top: 35vh;
+    right: -11vh;
+    top: 30vh;
+    z-index: 0;
+    animation-name: cloud_flying;
+    animation-duration: var(--duration, 6s);
+    animation-iteration-count: infinite;
 }
 
 #mashroom {
@@ -360,6 +380,7 @@ header {
     transition: 1s;
     z-index: 1;
     border: #f7b63d 3px solid;
+    overflow: visible;
 }
 
 .course-card:hover {
@@ -394,7 +415,7 @@ header {
 .course-card-text h3 {
     font-family: "Sansita", sans-serif;
     font-style: bold;
-    text-align: right;
+    text-align: center;
     font-size: 33px;
 }
 
@@ -403,7 +424,7 @@ header {
     font-weight: 400;
     font-size: 25px;
     font-style: italic;
-    text-align: right;
+    text-align: center;
 }
 
 .cloud {
@@ -516,6 +537,23 @@ header {
 
     100% {
         filter: brightness(1);
+    }
+}
+
+@keyframes select-course-btn-animation {
+    0% {
+        filter: brightness(1);
+        transform: scale(1);
+    }
+
+    50% {
+        filter: brightness(1.4);
+        transform: scale(1.03);
+    }
+
+    100% {
+        filter: brightness(1);
+        transform: scale(1);
     }
 }
 
