--- a/style.css
+++ b/style.css
@@ -269,7 +269,7 @@ header {
     position: relative;
 }
 
-#top_decor {
+#top-decor {
     position: absolute;
     top: 0;
     width: 100%;
@@ -318,7 +318,7 @@ header {
     max-width: 50%;
 }
 
-#bottom_decor {
+#bottom-decor {
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -524,6 +524,7 @@ header {
 #students-section h3 {
     padding-top: 4vh;
     padding-bottom: 4vh;
+    letter-spacing: 3px;
 }
 
 #students-section div {
@@ -591,9 +592,35 @@ header {
     width: 100%;
     height: 100vh;
     position: relative;
+    overflow: hidden;
+}
+
+#top-decor-without-bubbles {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    background-image: url(res/top_decor_without_bubbles.png);
+    height: 15vh;
+    background-repeat: repeat-x;
+    background-position: top;
+    background-size: cover;
+    z-index: 0;
+}
+
+.bubble {
+    position: absolute;
+    background-image: url("res/purple_bubble.png");/* Путь к текстуре пузырька */
+    background-size: contain; /* Размер текстуры */
+    width: 50px; /* Начальная ширина пузырька */
+    height: 50px; /* Начальная высота пузырька */
+    animation: float 5s linear infinite; /* Анимация: плавное опускание вниз */
+    z-index: 0;
+    display: block;
+    border-radius: 100%;
 }
 
 #questions-content {
+    z-index: 1;
     padding: 5%;
     padding-top: 13%;
     display: flex;
@@ -606,6 +633,7 @@ header {
     color: #400D69;
     font-size: 45px;
     text-align: start;
+    z-index: 1;
 }
 
 #fabs {
@@ -614,7 +642,8 @@ header {
     margin-top: 5vh;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly
+    justify-content: space-evenly;
+    z-index: 1;
 }
 
 .faq-left {
@@ -652,6 +681,24 @@ header {
     background-color: #d3d3d3;
     border-radius: 5px;
 }
+
+#submit-app-section {
+    position: relative;
+    background-color: #f7b63d;
+    letter-spacing: 3;
+    color: black;
+    height: 80vh;
+    margin-bottom: 20vh;
+}
+
+
+
+
+
+
+
+
+
 
 
 
@@ -798,6 +845,15 @@ header {
     left: 85%;
     width: 31px;
     height: 31px;
+}
+
+@keyframes float {
+    0% {
+        transform: translateY(-10px); /* Начальная позиция: над экраном */
+    }
+    100% {
+        transform: translateY(100vh); /* Конечная позиция: внизу экрана */
+    }
 }
 
 @keyframes flying {
