--- a/style.css
+++ b/style.css
@@ -67,10 +67,10 @@ header {
 }
 
 .logo {
-    height: 90%;
+    width: 15vw;
 }
 
-.header-items {
+.menu {
     height: 100%;
     padding-right: 1%;
     width: 50%;
@@ -79,14 +79,14 @@ header {
     align-items: center;
 }
 
-.header-items a {
+.menu a {
     color: white;
     text-decoration: none;
     font-size: 2vw;
     transition: 0.5s;
 }
 
-.header-items a:hover {
+.menu a:hover {
     color: #A4FFDE;
 }
 
@@ -585,7 +585,7 @@ header {
 
 #questions-section {
     width: 100%;
-    height: 100vh;
+    height: 110vh;
     position: relative;
     overflow: hidden;
 }
@@ -634,7 +634,7 @@ header {
 #fabs {
     width: 50%;
     margin: auto;
-    margin-top: 5vh;
+    margin-top: 10vh;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -659,9 +659,10 @@ header {
     background-color: #f0f0f0;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
     padding: 10px;
-    width: 70%;
+    width: 80%;
+    border: 1px solid #FFC75C;
     color: #410E6A;
-    border-radius: 5px;
+    border-radius: 15px;
     cursor: pointer;
 }
 
@@ -669,12 +670,13 @@ header {
     margin-left: 15px;
     margin-top: -5px;
     font-family: sans-serif;
+    border: 1px solid #410E6A;
     display: none;
     padding: 10px;
-    width: 70%;
+    width: 80%;
     color: #410E6A;
     background-color: #d3d3d3;
-    border-radius: 5px;
+    border-radius: 15px;
 }
 
 #submit-app-section {
@@ -706,7 +708,7 @@ header {
     margin-left: 20px;
 }
 
-#submit-app-form input[type="text"] {
+#submit-app-form input {
     width: 300px;
     margin-bottom: 10px;
     padding: 8px;
@@ -977,15 +979,21 @@ footer a:hover {
 
     .logo {
         margin-bottom: 10px;
+
     }
 
-    .header-items {
-        display: flex;
+    .menu {
+        display: none;
         flex-direction: row;
         align-items: center;
     }
 
-    .header-items a {
+
+    .menu.open {
+        display: block;
+    }
+
+    .menu a {
         margin: 5px 0;
     }
 }
@@ -1001,5 +1009,9 @@ footer a:hover {
     .header-items {
         display: flex;
         gap: 20px;
+    }
+
+    #menu-toggle {
+        display: none;
     }
 }
