--- a/style.css
+++ b/style.css
@@ -743,10 +743,15 @@ header {
     justify-content: center;
     align-items: flex-start;
     margin-left: 20px;
+    width: 15vw;
+}
+
+#submit-app-photo {
+    width: 15vw;
 }
 
 #submit-app-form input {
-    width: 300px;
+    width: 100%;
     margin-bottom: 10px;
     padding: 8px;
     border: 1px solid #ccc;
@@ -754,7 +759,7 @@ header {
 }
 
 #submit-app-form input[type="submit"] {
-    width: 150px;
+    width: 50%;
     padding: 10px;
     border: none;
     border-radius: 5px;
@@ -1010,13 +1015,13 @@ footer a:hover {
 @media screen and (max-width: 600px) {
     header {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        justify-content: space-between;
         align-items: center;
     }
 
     .logo {
-        margin-bottom: 10px;
-
+        width: 30vw;
     }
 
     .menu {
@@ -1032,6 +1037,32 @@ footer a:hover {
 
     .menu a {
         margin: 5px 0;
+    }
+
+    .button-img {
+        width: 8vw;
+        border: none;
+        padding: 0;
+        background: none;
+        cursor: pointer;
+        outline: none;
+    }
+    
+    .button-img img {
+        width: 100%;
+        height: auto;
+    }
+
+    #submit-app-photo {
+        width: 30vw;
+    }
+
+    #submit-app-form {
+        width: 30vw;
+    }
+
+    #submit-app-form input[type="submit"] {
+        width: 100%;
     }
 }
 
@@ -1050,11 +1081,5 @@ footer a:hover {
 
     #menu-toggle {
         display: none;
-        background-image: url('res/mobile_menu_btn.png');
-        background-position: center;
-        background-size: contain;
-        background-repeat: no-repeat;
-        height: 30px;
-        width: 30px;
     }
 }
