--- a/style.css
+++ b/style.css
@@ -601,9 +601,21 @@ header {
     align-items: center;
     position: relative;
     overflow: hidden;
+    background-color: #410E6A;
+}
+
+#guide-school-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
     width: 100%;
     height: 100vh;
-    background-color: #410E6A;
+}
+
+#guide-school-content h3 {
+    font-size: 3vw;
 }
 
 .square {
