--- a/style.css
+++ b/style.css
@@ -86,16 +86,23 @@ body {
 }
 
 header {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
+    color: white;
     height: 8vh;
     background-color: rgba(231, 105, 228, 0.25);
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0px 10px;
+    z-index: 3;
+}
+
+.header-scrolled {
+    background-color: white;
+    box-shadow: 0 2px 10px gray;
 }
 
 .conteiner {
@@ -116,10 +123,17 @@ header {
 }
 
 .menu a {
-    color: white;
     text-decoration: none;
     font-size: 2vw;
     transition: 0.5s;
+}
+
+.menu-button-scrolled {
+    color: black;
+}
+
+.menu-button-no-scrolled {
+    color: white;
 }
 
 .menu a:hover {
