--- a/style.css
+++ b/style.css
@@ -631,12 +631,6 @@ header {
     font-size: 3vw;
 }
 
-.square {
-    position: absolute;
-    background-color: #E769E4;
-    z-index: 0;
-}
-
 #guide-school-video {
     width: 60%;
     height: 71%;
@@ -694,7 +688,7 @@ header {
 }
 
 #fabs {
-    width: 50%;
+    width: 70%;
     margin: auto;
     margin-top: 10vh;
     display: flex;
@@ -712,35 +706,35 @@ header {
 
 .faq-right {
     margin: 2%;
-    flex: 1;
+    flex: 1.3;
     display: flex;
     flex-direction: column;
+}
+
+.faq {
+    width: 100%;
+    padding: 10px;
+    padding-left: 5%;
+    padding-right: 5%;
+    border-radius: 15px;
+    color: #410E6A;
+    font-family: sans-serif;
 }
 
 .faq-item {
     margin: 15px;
     margin-bottom: 5px;
-    font-family: sans-serif;
     background-color: #ffffff;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
-    padding: 10px;
-    width: 100%;
     border: 1px solid #FFC75C;
-    color: #410E6A;
-    border-radius: 15px;
     cursor: pointer;
 }
 
 .faq-answer {
     margin-left: 15px;
-    font-family: sans-serif;
     border: 1px solid #410E6A;
     display: none;
-    padding: 10px;
-    width: 100%;
-    color: #410E6A;
     background-color: #f0f0f0;
-    border-radius: 15px;
 }
 
 #submit-app-section {
@@ -811,6 +805,12 @@ footer a:hover {
     text-decoration: underline;
 }
 
+.square {
+    position: absolute;
+    background-color: #E769E4;
+    z-index: 0;
+}
+
 #square1 {
     top: 10%;
     left: 10%;
@@ -819,29 +819,29 @@ footer a:hover {
 }
 
 #square2 {
-    top: 25%;
-    left: 25%;
+    bottom: 55%;
+    left: 15%;
     width: 25px;
     height: 25px;
 }
 
 #square3 {
-    top: 80%;
-    left: 40%;
+    bottom: 5%;
+    left: 10%;
     width: 30px;
     height: 30px;
 }
 
 #square4 {
     top: 85%;
-    left: 55%;
+    left: 95%;
     width: 35px;
     height: 35px;
 }
 
 #square5 {
-    top: 70%;
-    left: 70%;
+    top: 75%;
+    left: 88%;
     width: 40px;
     height: 40px;
 }
@@ -868,15 +868,15 @@ footer a:hover {
 }
 
 #square9 {
-    top: 60%;
-    left: 20%;
+    bottom: 30%;
+    left: 5%;
     width: 18px;
     height: 18px;
 }
 
 #square10 {
-    top: 75%;
-    left: 35%;
+    bottom: 5%;
+    left: 3%;
     width: 23px;
     height: 23px;
 }
@@ -924,22 +924,22 @@ footer a:hover {
 }
 
 #square17 {
-    top: 93%;
-    left: 45%;
+    bottom: 0%;
+    left: 85%;
     width: 36px;
     height: 36px;
 }
 
 #square18 {
-    top: 70%;
-    left: 60%;
+    top: 65%;
+    left: 87%;
     width: 39px;
     height: 39px;
 }
 
 #square19 {
     top: 75%;
-    left: 75%;
+    left: 85%;
     width: 24px;
     height: 24px;
 }
