--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ header {
 }
 
 .header-scrolled {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.9);
     box-shadow: 0 2px 10px gray;
 }
 
