--- a/style.css
+++ b/style.css
@@ -320,17 +320,7 @@ header {
     top: 6vh;
 }
 
-.about-section {
-    text-align: center;
-    color: white;
-    display: relative;
-}
-
-.about-content {
-    position: relative;
-}
-
-#top-decor {
+.top-decor {
     position: absolute;
     top: -1px;
     width: 100%;
@@ -342,9 +332,16 @@ header {
     z-index: 1;
 }
 
-.flex-section {
+.about-section {
+    text-align: center;
+    color: white;
+    position: relative;
+}
+
+.about-container {
     display: flex;
     align-items: center;
+    flex-direction: row;
 }
 
 .left {
@@ -379,7 +376,7 @@ header {
     max-width: 50%;
 }
 
-#bottom-decor {
+.bottom-decor {
     position: absolute;
     bottom: -1px;
     width: 100%;
@@ -1090,6 +1087,40 @@ footer a:hover {
 
     #submit-app-form input[type="submit"] {
         width: 100%;
+    }
+
+    .start-section {
+        height: 85vh;
+    }
+
+    .top-decor {
+        height: 13vh;
+        background-size: cover;
+    }
+
+    #top-decor-without-bubbles {
+        margin-top: -1px;
+        height: 10vh;
+        background-size: cover;
+    }
+
+    .bottom-decor {
+        height: 13vh;
+        background-size: cover;
+    }
+
+    .about-container {
+        flex-direction: column;
+        padding-left: 7%;
+        padding-right: 7%;
+    }
+
+    .left h2 {
+        font-size: 6vw;
+    }
+
+    .left p {
+        font-size: 4vw;
     }
 }
 
