--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ header {
     align-items: center;
 }
 
-.menu a {
+.menu-item {
     text-decoration: none;
     font-size: 2vw;
     transition: 0.5s;
@@ -152,12 +152,16 @@ header {
     color: black;
 }
 
+.menu-button-scrolled:hover {
+    color: #400D69;
+}
+
 .menu-button-no-scrolled {
     color: white;
 }
 
-.menu a:hover {
-    color: #A4FFDE;
+.menu-button-no-scrolled:hover {
+    color: #E769E4;
 }
 
 .start-content h1 {
@@ -427,7 +431,7 @@ header {
     text-align: center;
 }
 
-.courses-section {
+#courses-section {
     text-align: center;
     max-height: 150vh;
     color: rgb(221, 245, 255);
@@ -627,7 +631,7 @@ header {
     transform: scale(0.9);
 }
 
-.guide-school-section {
+#guide-school-section {
     width: 100%;
     height: 100vh;
     display: flex;
